[package]
name = "twilite"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description  = "Tiny wiki backed by SQLite"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

[dependencies]
ammonia = "4.1.2"
anyhow = "1.0.100"
async-sqlite = "0.5.3"
axum = {version = "0.8.4", features = ["multipart", "query"] }
axum-extra = { version = "0.10.1", features = ["query"] }
axum-macros = "0.5.0"
cfg-if = "1.0.3"
clap = { version = "4.5.48", features = ["derive", "wrap_help"] }
dotenv = "0.15.0"
kuchiki = "0.8.1"
mime_guess = "2.0.5"
oauth-axum = "0.1.4"
open = "5.3.2"
refinery = { version = "0.8.16", features = ["rusqlite"] }
regex = "1.11.3"
rusqlite = "0.37.0"
rust-embed = "8.7.2"
serde = "1.0.226"
sql_query_builder = "2.5.2"
thiserror = "2.0.16"
time = { version = "0.3.44", features = ["formatting"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
toml = "0.9.7"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["fs", "set-header"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
uri = "0.4.0"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[patch.crates-io]
refinery = { git = "https://github.com/rust-db/refinery" }
